# congressional-trading-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPREHENSIVE_DASHBOARD_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PARALLEL_TASKS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  Procfile  QUICKSTART_REDDIT.md  README-Enhanced-System.md  README-Phase1.md  README.md  README_Enhanced_Analysis.md  VISION_AND_ROADMAP.md  add_comprehensive_route.py  app.py  app_complex.py  congressional_dashboard.py  debug_dashboard.html  deploy_fix.sh  deploy_to_railway.sh  enhanced_backend.py  fix_dashboard.py  full_congressional_system.py  launch_comprehensive_dashboard.py  launch_enhanced_dashboard.py  launch_enhanced_system.py  lobbying_api_integration.py  nixpacks.toml  pyproject.toml  quick_fix.py  railway.json  railway.toml  railway.toml.backup  requirements-dev.txt  (+27 more)
.augment/: config.json
.claude-suite/project/: decisions.md  error-handlers.md  mission.md  roadmap.md  tech-stack.md
.claude-suite/workflows/: analyze-codebase.md  clean-codebase.md  daily-dev.md  test-intelligence-engine.md
.claude/commands/: project-status.md  quick-test.md
.ultimate-dev-system/: state.json
analysis/network/: network_analysis_report_20250801_173318.json  network_analysis_report_20250801_173611.json  network_analysis_report_20250801_173652.json  network_analysis_report_20250801_181416.json  network_analysis_report_20250801_181547.json
analysis_output/: analysis_summary.json  congressional_trades_analysis.csv
config/: database.yml
database/: schema.sql  setup.py
database/migrations/: 001_initial_setup.sql
docs/: AI_INSIGHTS_FEATURE.md  advanced_intelligence_features.md  complete_code_inventory.md  complete_monitoring_system.md  congressional_analysis_notes.md  congressional_insider_monitoring_system.md  current_congress_analysis.md  deep_dive_code_review.md  development_plan.md  executive_summary.md  hobby_development_plan.md  hobby_scale_design.md  honest_assessment.md  integration_fixes_complete.md  legislation_timeline.md  phase2-intelligence-monitoring-spec.md  phase2-ml-models-spec.md  phase2-network-analysis-spec.md  phase2-react-dashboard-spec.md  phase2-specification.md  regulatory_technical_analysis.md  research_findings.md  system_architecture_design.md  ultimate_trading_system_architecture.md
exports/: congressional_members_20250822.csv
models/phase2/: anomaly_scaler.pkl  dbscan_model.pkl  isolation_forest_model.pkl  one_class_svm_model.pkl  random_forest_model.pkl  risk_weights.pkl
optimization/: phase1_infrastructure.py
scripts/: populate_congressional_database.py  railway_deploy.sh
src/analysis/: advanced_pattern_analyzer.py  comprehensive_congressional_analysis.py  congressional_analysis.py  current_members_analysis.py  enhanced_analysis.py  legislation_correlation_analysis.py  options_analyzer.py  pattern_insights_engine.py  predictive_intelligence.py  statistical_analyzer.py
src/api/: __init__.py  app.py  auth.py  config.py  database.py  schemas.py  services.py  trades.py
src/api_disabled/: app.py  auth.py
src/bots/: .env.example  __init__.py  base.py  discord_bot.py  twitter_bot.py
src/core/: ai_model_trainer.py  apex_trading_engine.py  api_key_manager.py  data_collector.py  insider_trading_detector.py  intelligence_fusion_engine.py  monte_carlo_risk_engine.py
src/dashboard/: App.jsx  comprehensive_dashboard.html  comprehensive_dashboard_WORKING.html  dashboard_backend.py  enhanced-dashboard-v2.html  enhanced_dashboard.html  enhanced_dashboard_with_real_data.html  index.html  package.json  react_dashboard.py
src/dashboard_react/: package.json
src/data/: congressional_members_full.json  congressional_trades_full.json  full_congressional_database.py
src/data_pipeline/: __init__.py  automated_updater.py  etl_coordinator.py
src/data_sources/: __init__.py  congress_gov_client.py  congress_gov_scraper.py  disclosure_scheduler.py  filing_pipeline.py  finnhub_client.py  house_disclosure_scraper.py  market_data.py  propublica_client.py  senate_disclosure_scraper.py
src/infrastructure/: edge_computing.py
src/intelligence/: __init__.py  alternative_data_fusion.py  behavioral_fingerprinting.py  news_monitor.py  (+6 more)
tests/: test_api_comprehensive.py
(+59 files in other folders)
